# jax-hod

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmark/: device_comparison.py  multi_device.py  populate_jit.py
docs/: abacus.md  api.md  conf.py  getting_started.md  index.md  installation.md  performance.md
jaxhod/: __init__.py  populate.py  profiles.py
jaxhod/models/: __init__.py  zheng07.py
jaxhod/simulations/: __init__.py  abacus.py
nb/: abacus_examples.ipynb  basic_examples.ipynb  memory_scaling.py
tests/: test_zheng07.py
